--- a/odbcat/odbcat.vcxproj.filters
+++ b/odbcat/odbcat.vcxproj.filters
@@ -138,6 +138,15 @@
     <ClInclude Include="CatDatabaseMetaDataUnicodeImp.h">
       <Filter>imp</Filter>
     </ClInclude>
+    <ClInclude Include="CatDataSourceInformationsImp.h">
+      <Filter>imp</Filter>
+    </ClInclude>
+    <ClInclude Include="CatDriverInformationsImp.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CatDriverInformationAttributesImp.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -241,6 +250,15 @@
     </ClCompile>
     <ClCompile Include="CatDatabaseMetaDataUnicodeImp.cpp">
       <Filter>imp</Filter>
+    </ClCompile>
+    <ClCompile Include="CatDataSourceInformationsImp.cpp">
+      <Filter>imp</Filter>
+    </ClCompile>
+    <ClCompile Include="CatDriverInformationsImp.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CatDriverInformationAttributesImp.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
